--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <main>
-      hello
     </main>
+    <script src="foreground.js"></script>
     <script src="sketch.js"></script>
+    
   </body>
 </html>
