Added new path to fix bug on public dev version

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="page-container">
       <h1 class="title">Walsh Univesrity Software App</h1>
       <div class="game">
-        <button onclick="window.location.href='/game.html';">
+        <button onclick="window.location.href='./SWE_Walsh/game.html';">
           Play Game!
         </button>
       </div>
