added music to title screen

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <body>
     <div class="page-container">
       <h1 class="title">Walsh Univesrity Software App</h1>
+      <audio controls autoplay loop src="Songs/Fluttery Sledge - 100 BPM - 1 - Drums - VapourTrail_100_FullDrums.wav" type = "audio/wav" hidden="true">
+      </audio>
+      <audio controls autoplay loop src="Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type = "audio/wav" hidden="true">
+      </audio>
       <div class="game">
         <button onclick="window.location.href='/game.html';">
           Play Game!
