--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="page-container">
-      <h1 class="title">Walsh Univesrity Software App</h1>
+      <h1 class="title">Walsh University Software App</h1>
       <div class="game">
         <button onclick="window.location.href='/SWE_Walsh/game.html';">
           Play Game!
