Fix bugs and typo with tytle screen

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   </head>
   <body>
     <div class="page-container">
-      <h1 class="title">Walsh Univesrity Software App</h1>
+      <h1 class="title">Walsh University Software App</h1>
       <audio controls autoplay loop src="Songs/Fluttery Sledge - 100 BPM - 1 - Drums - VapourTrail_100_FullDrums.wav" type = "audio/wav" hidden="true">
       </audio>
       <audio controls autoplay loop src="Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type = "audio/wav" hidden="true">
       </audio>
       <div class="game">
-        <button onclick="window.location.href='/game.html';">
+        <button onclick="window.location.href='/SWE_Walsh/game.html';">
           Play Game!
         </button>
       </div>
