--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <audio controls autoplay loop src="Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type = "audio/wav" hidden="true">
       </audio>
       <div class="game">
-        <button onclick="window.location.href='/SWE_Walsh/game.html';">
+        <button onclick="window.location.href='/game.html';">
           Play Game!
         </button>
       </div>
