--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="title.css">
     <meta charset="utf-8" />
 
@@ -11,14 +9,14 @@
   <body>
     <div class="page-container">
       <h1 class="title">Walsh University Software App</h1>
-      <audio controls autoplay loop src="Songs/Fluttery Sledge - 100 BPM - 1 - Drums - VapourTrail_100_FullDrums.wav" type = "audio/wav" hidden="true">
+      <audio controls autoplay loop src="/Songs/Fluttery Sledge - 100 BPM - 1 - Drums - VapourTrail_100_FullDrums.wav" type = "audio/wav" hidden="true">
       </audio>
-      <audio controls autoplay loop src="Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type = "audio/wav" hidden="true">
+      <audio controls autoplay loop src="/Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type = "audio/wav" hidden="true">
       </audio>
       <div class="game">
-        <button onclick="window.location.href='/game.html';">
+        <a href="https://rstahl25.github.io/SWE_Walsh/game.html">
           Play Game!
-        </button>
+        </a>
       </div>
     </div>
     
