--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
   </head>
   <body>
     <div class="page-container">
+      <audio controls autoplay loop src="/workspaces/SWE_Walsh/Songs/Fluttery Sledge - 100 BPM - 1 - Drums - VapourTrail_100_FullDrums.wav" type = "audio/wav">
+      </audio>
+      <audio controls autoplay loop src="/workspaces/SWE_Walsh/Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type = "audio/wav">
+      </audio>
       <h1 class="title">Walsh University Software App</h1>
-      <audio controls autoplay loop src="/Songs/Fluttery Sledge - 100 BPM - 1 - Drums - VapourTrail_100_FullDrums.wav" type = "audio/wav" hidden="true">
-      </audio>
-      <audio controls autoplay loop src="/Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type = "audio/wav" hidden="true">
-      </audio>
       <div class="game">
         <a href="https://rstahl25.github.io/SWE_Walsh/game.html">
           Play Game!
         </a>
       </div>
     </div>
-    
   </body>
 </html>
