--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="page-container">
-      <audio controls autoplay loop src="/Songs/Fluttery Sledge - 100 BPM - 1 - Drums - VapourTrail_100_FullDrums.wav" type = "audio/wav" hidden="true">
+      <audio controls autoplay loop src="./Songs/Fluttery Sledge - 100 BPM - 1 - Drums - VapourTrail_100_FullDrums.wav" type = "audio/wav" hidden="true">
       </audio>
-      <audio controls autoplay loop src="/Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type = "audio/wav" hidden="true">
+      <audio controls autoplay loop src="./Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type = "audio/wav" hidden="true">
       </audio>
       <h1 class="title">Walsh University Software App</h1>
       <div class="game">
