Use relative file paths for music

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <div class="page-container">
       <audio controls autoplay loop hidden="true">
-        <source src="https://rstahl25.github.io/SWE_Walsh/Songs/Fluttery%20Sledge%20-%20100%20BPM%20-%202%20-%20Bass%20-%20cw3_bss90_lucid_G.wav" type="audio/wav">
+        <source src="/Songs/Fluttery Sledge - 100 BPM - 1 - Drums - VapourTrail_100_FullDrums.wav" type="audio/wav">
       </audio>
       <audio controls autoplay loop hidden="true">
-        <source src="https://rstahl25.github.io/SWE_Walsh/Songs/Fluttery%20Sledge%20-%20100%20BPM%20-%201%20-%20Drums%20-%20VapourTrail_100_FullDrums.wav" type="audio/wav">
+        <source src="/Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type="audio/wav">
       </audio>
       <h1 class="title">Walsh University Software App</h1>
       <div class="game">
