--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <div class="page-container">
       <audio controls autoplay loop hidden="true">
-        <source src="/Songs/Fluttery Sledge - 100 BPM - 1 - Drums - VapourTrail_100_FullDrums.wav" type="audio/wav">
+        <source src="./Songs/Fluttery Sledge - 100 BPM - 1 - Drums - VapourTrail_100_FullDrums.wav" type="audio/wav">
       </audio>
       <audio controls autoplay loop hidden="true">
-        <source src="/Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type="audio/wav">
+        <source src="./Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type="audio/wav">
       </audio>
       <h1 class="title">Walsh University Software App</h1>
       <div class="game">
