--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
   </head>
   <body>
     <div class="page-container">
-      <audio controls autoplay loop hidden="true">
-        <source src="./Songs/Fluttery Sledge - 100 BPM - 1 - Drums - VapourTrail_100_FullDrums.wav" type="audio/wav">
-      </audio>
-      <audio controls autoplay loop hidden="true">
+      <audio controls autoplay loop>
         <source src="./Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type="audio/wav">
       </audio>
       <h1 class="title">Walsh University Software App</h1>
