Add preload attribute

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="page-container">
-      <audio controls autoplay loop>
+      <audio controls autoplay loop preload>
         <source src="./Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type="audio/wav">
       </audio>
       <h1 class="title">Walsh University Software App</h1>
