Try new audio layout

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
   </head>
   <body>
-    <audio controls autoplay loop>
-      <source src="./Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type="audio/wav" />
+    <audio controls src="./Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" autoplay loop type="audio/wav">
     </audio>
     <div class="page-container">
       <h1 class="title">Walsh University Software App</h1>
