--- a/game.html
+++ b/game.html
@@ -13,6 +13,7 @@
     <script src="foreground.js"></script>
     <script src="sketch.js"></script>
     <script src="platform.js"></script>
+    <script src="character.js"></script>
     
   </body>
 </html>
