--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="title.css">
     <meta charset="utf-8" />
+
 
   </head>
   <body>
-    <main>
-    </main>
-    <script src="foreground.js"></script>
-    <script src="sketch.js"></script>
-    <script src="platform.js"></script>
-    
+    <div class="page-container">
+      <h1 class="title">Walsh University Software App</h1>
+      <div class="game">
+        <a href='/game.html'>
+          Play Game!
+        </a>
+      </div>
+    </div>
   </body>
 </html>
