Add music to working branch

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
   </head>
   <body>
+    <audio controls autoplay loop>
+      <source src="./Songs/Fluttery Sledge - 100 BPM - 1 - Drums - VapourTrail_100_FullDrums.wav" type="audio/wav" />
+    </audio>
     <div class="page-container">
       <h1 class="title">Walsh University Software App</h1>
       <div class="game">
