--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <audio controls autoplay loop>
+      <source src="./Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type="audio/wav" />
+    </audio>
+    <audio controls autoplay loop>
       <source src="./Songs/Fluttery Sledge - 100 BPM - 1 - Drums - VapourTrail_100_FullDrums.wav" type="audio/wav" />
     </audio>
     <div class="page-container">
