--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
   </head>
   <body>
-    <audio controls autoplay loop>
+    <audio controls autoplay preload="auto" loop>
       <source src="./Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type="audio/wav">
     </audio>
     <div class="page-container">
       <h1 class="title">Walsh University Software App</h1>
       <div class="game">
-        <a href='/game.html'>
+        <a href="https://rstahl25.github.io/SWE_Walsh/game.html">
           Play Game!
         </a>
       </div>
