Change url for local host versions

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="page-container">
       <h1 class="title">Walsh University Software App</h1>
       <div class="game">
-        <a href="https://rstahl25.github.io/SWE_Walsh/game.html">
+        <a href="game.html">
           Play Game!
         </a>
       </div>
