--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
     </main>
     <script src="foreground.js"></script>
     <script src="sketch.js"></script>
+    <script src="player.js"></script>
     <script src="platform.js"></script>
     
   </body>
