--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div class="page-container">
       <h1 class="title">Walsh University Software App</h1>
       <div class="game">
-        <a href="https://rstahl25.github.io/SWE_Walsh/game.html">
+        <!--local host address: href="/level_selection.html"-->
+        <a href="https://rstahl25.github.io/SWE_Walsh/level_selection.html">
           Play Game!
         </a>
       </div>
