--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" type="text/css" href="title.css">
+    <script src="path/to/p5.sound.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/addons/p5.sound.min.js"></script>
     <meta charset="utf-8" />
 
 
   </head>
   <body>
+    <script src="soundplay.js"></script>
     <audio controls autoplay preload="auto" loop>
       <source src="./Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type="audio/wav">
     </audio>
+
     <div class="page-container">
       <h1 class="title">Walsh University Software App</h1>
       <div class="game">
