--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   </head>
   <body>
     <script src="soundplay.js"></script>
-    <audio controls autoplay preload="auto" loop>
-      <source src="./Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type="audio/wav">
-    </audio>
+    <audio src="https://rstahl25.github.io/SWE_Walsh/Songs/testAudio.mp3" autoplay></audio>
 
     <div class="page-container">
       <h1 class="title">Walsh University Software App</h1>
