--- a/level_selection.html
+++ b/level_selection.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="level_selection.css">
     <meta charset="utf-8" />
   </head>
   <body>
+    <audio controls autoplay preload="auto" loop>
+      <source src="./Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type="audio/wav">
+    </audio>
     <div class="page-container">
       <!--local host address: href="/index.html"-->
       <a href="https://rstahl25.github.io/SWE_Walsh/index.html" class="back">
