--- a/level_selection.html
+++ b/level_selection.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <audio controls autoplay preload="auto" loop>
+    <audio hidden="true" controls autoplay preload="auto" loop>
       <source src="./Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type="audio/wav">
     </audio>
     <div class="page-container">
