--- a/level1.html
+++ b/level1.html
@@ -11,9 +11,8 @@
     <main>
     </main>
     <script src="foreground.js"></script>
-    <script src="sketch.js"></script>
+    <script src="level1.js"></script>
     <script src="player.js"></script>
-    <script src="platform.js"></script>
     
   </body>
 </html>
