Put platform calls in level1.js file

--- a/level1.html
+++ b/level1.html
@@ -13,6 +13,7 @@
     <script src="foreground.js"></script>
     <script src="level1.js"></script>
     <script src="player.js"></script>
+    <script src="platform.js"></script>
     
   </body>
 </html>
