Move end goal code into its own file

--- a/level1.html
+++ b/level1.html
@@ -14,6 +14,7 @@
     <script src="level1.js"></script>
     <script src="player.js"></script>
     <script src="platform.js"></script>
+    <script src="endgoal1.js"></script>
     
   </body>
 </html>
