Reorganize files to put code in better places

--- a/level1.html
+++ b/level1.html
@@ -11,9 +11,9 @@
     <main>
     </main>
     <script src="foreground.js"></script>
-    <script src="sketch.js"></script>
+    <script src="level1.js"></script>
     <script src="player.js"></script>
     <script src="platform.js"></script>
-    
+    <script src="endgoal.js"></script>
   </body>
 </html>
