Disable unused buttons

--- a/level_selection.html
+++ b/level_selection.html
@@ -20,13 +20,13 @@
           Level 1
         </a>
         <!--local host address: href="/leve2.html"-->
-        <a href="https://rstahl25.github.io/SWE_Walsh/level2.html">
+        <!-- <a href="https://rstahl25.github.io/SWE_Walsh/level2.html">
           Level 2
-        </a>
+        </a> -->
         <!--href="/level3.html"-->
-        <a href="https://rstahl25.github.io/SWE_Walsh/level3.html">
+        <!-- <a href="https://rstahl25.github.io/SWE_Walsh/level3.html">
           Level 3
-        </a>
+        </a> -->
       </div>
     </div>
   </body>
