--- a/level_selection.html
+++ b/level_selection.html
@@ -20,9 +20,9 @@
           Level 1
         </a>
         <!--local host address: href="/leve2.html"-->
-        <!-- <a href="https://rstahl25.github.io/SWE_Walsh/level2.html">
+        <a href="https://rstahl25.github.io/SWE_Walsh/level2.html">
           Level 2
-        </a> -->
+        </a>
         <!--href="/level3.html"-->
         <!-- <a href="https://rstahl25.github.io/SWE_Walsh/level3.html">
           Level 3
