Rename original level1 to 'tutorial' and set new level 1 as 'level1'

--- a/tutorial.html
+++ b/tutorial.html
@@ -12,7 +12,7 @@
   <body>
     <main>
     </main>
-    <script src="level_1.js"></script>
+    <script src="tutorial.js"></script>
     <script src="endgoal.js"></script>
   </body>
 </html>
