Create new level 1 and rename old level1 to 'tutorial'

--- a/level_selection.html
+++ b/level_selection.html
@@ -14,14 +14,14 @@
           Back
       </a>
       <h1 class="title">Select a Level</h1>
-      <!--local host address: href="/level1.html"-->
+      <!--local host address: href="/tutorial.html"-->
       <div class="game">
+        <a href="https://rstahl25.github.io/SWE_Walsh/tutorial.html">
+          Tutorial
+        </a>
+        <!--local host address: href="/level1.html"-->
         <a href="https://rstahl25.github.io/SWE_Walsh/level1.html">
           Level 1
-        </a>
-        <!--local host address: href="/leve2.html"-->
-        <a href="https://rstahl25.github.io/SWE_Walsh/level2.html">
-          Level 2
         </a>
         <!--href="/level3.html"-->
         <!-- <a href="https://rstahl25.github.io/SWE_Walsh/level3.html">
