Update backup of tutorial level

--- a/tutorial.html
+++ b/tutorial.html
@@ -12,7 +12,7 @@
   <body>
     <main>
     </main>
-    <script src="level1.js"></script>
+    <script src="tutorial.js"></script>
     <script src="endgoal.js"></script>
   </body>
 </html>
