--- a/level2.html
+++ b/level2.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
+    <style>
+      html {
+        overflow: hidden;
+      }
+    </style>
+
   </head>
   <body>
     <main>
