--- a/tutorial.html
+++ b/tutorial.html
@@ -10,6 +10,9 @@
 
   </head>
   <body>
+    <audio hidden="true" controls autoplay preload="auto" loop>
+      <source src="./Songs/playGame.mp3" type="audio/mp3">
+    </audio>
     <main>
     </main>
     <script src="tutorial.js"></script>
