--- a/level_selection.html
+++ b/level_selection.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="level_selection2.css">
+        <link rel="stylesheet" type="text/css" href="level_selection.css">
         <meta charset="utf-8" />
     </head>
     <style>
