--- a/level_selection.html
+++ b/level_selection.html
@@ -21,6 +21,6 @@
         <a class="lvlOne" href="https://rstahl25.github.io/SWE_Walsh/level1.html">1</a>
         <a class="lvlTwo" href="https://rstahl25.github.io/SWE_Walsh/level2.html">2</a>
         <a class="founders" href="https://rstahl25.github.io/SWE_Walsh/maintenance.html">X</a>
-        <a class="barrette" href="https://rstahl25.github.io/SWE_Walsh/maintenance.html">X</a>
+        <a class="barrette" href="https://rstahl25.github.io/SWE_Walsh/level3.html">3</a>
     </body>
 </html>
