--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="page-container">
-      <h1 class="title">Walsh University Software App</h1>
+      <h1 class="title">Walsh University Software Project</h1>
       <div class="game">
         <!--local host address: href="/level_selection.html"-->
         <a href="https://rstahl25.github.io/SWE_Walsh/level_selection.html">
