--- a/level_selection.html
+++ b/level_selection.html
@@ -14,13 +14,13 @@
             <source src="./Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type="audio/wav">
         </audio>
        <div class="header-row">
-            <a class="back" href="https://rstahl25.github.io/SWE_Walsh/index.html">Back</a>
+            <a class="back" href="/index.html">Back</a>
             <h1>Level Selection</h1>
        </div> 
-        <a class="lvlTut" href="https://rstahl25.github.io/SWE_Walsh/tutorial.html">T</a>
-        <a class="lvlOne" href="https://rstahl25.github.io/SWE_Walsh/level1.html">1</a>
-        <a class="lvlTwo" href="https://rstahl25.github.io/SWE_Walsh/level3.html">3</a>
-        <a class="founders" href="https://rstahl25.github.io/SWE_Walsh/maintenance.html">X</a>
-        <a class="barrette" href="https://rstahl25.github.io/SWE_Walsh/level2.html">2</a>
+        <a class="lvlTut" href="/tutorial.html">T</a>
+        <a class="lvlOne" href="/level1.html">1</a>
+        <a class="lvlTwo" href="/level3.html">3</a>
+        <a class="founders" href="/maintenance.html">X</a>
+        <a class="barrette" href="/level2.html">2</a>
     </body>
 </html>
