--- a/level3.html
+++ b/level3.html
@@ -16,6 +16,9 @@
 
   </head>
   <body>
+    <audio hidden="true" controls autoplay preload="auto" loop>
+      <source src="./Songs/lvl3.mp3" type="audio/mp3">
+    </audio>
     <main>
     </main>
     <script src="level3.js"></script>
