--- a/level1.html
+++ b/level1.html
@@ -10,6 +10,9 @@
 
   </head>
   <body>
+    <audio hidden="true" controls autoplay preload="auto" loop>
+      <source src="./Songs/lvl1.mp3" type="audio/mp3">
+    </audio>
     <main>
     </main>
     <script src="level1.js"></script>
