--- a/level2.html
+++ b/level2.html
@@ -10,6 +10,9 @@
 
   </head>
   <body>
+    <audio hidden="true" controls autoplay preload="auto" loop>
+      <source src="./Songs/lvl2.mp3" type="audio/mp3">
+    </audio>
     <main>
     </main>
     <script src="level2.js"></script>
