lvl selection update

--- a/level_selection.html
+++ b/level_selection.html
@@ -19,8 +19,9 @@
        </div> 
         <a class="lvlTut" href="/tutorial.html">T</a>
         <a class="lvlOne" href="/level1.html">1</a>
-        <a class="lvlTwo" href="/level3.html">3</a>
-        <a class="founders" href="/maintenance.html">X</a>
-        <a class="barrette" href="/level2.html">2</a>
+        <a class="lvlTwo" href="/level2.html">2</a>
+        <a class="lvlThree" href="/level3.html">3</a>
+        <a class="lvlFour" href="/maintenance.html">4</a>
+        <a class="lvlFive" href="/maintenance.html">5</a>
     </body>
 </html>
