--- a/level1.html
+++ b/level1.html
@@ -5,6 +5,7 @@
     <script src="https://p5play.org/v3/planck.min.js"></script>
     <script src="https://p5play.org/v3/p5play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="timeout.css">
     <meta charset="utf-8" />
 
   </head>
@@ -15,5 +16,6 @@
     <main>
     </main>
     <script src="level1.js"></script>
+    <div class="timer" id="countdown"></div>
   </body>
 </html>
