Level 4 just dropped

--- a/level_selection.html
+++ b/level_selection.html
@@ -21,7 +21,7 @@
         <a class="lvlOne" href="/level1.html">1</a>
         <a class="lvlTwo" href="/level2.html">2</a>
         <a class="lvlThree" href="/level3.html">3</a>
-        <a class="lvlFour" href="/maintenance.html">4</a>
+        <a class="lvlFour" href="/level4.html">4</a>
         <a class="lvlFive" href="/maintenance.html">5</a>
     </body>
 </html>
