--- a/level5.html
+++ b/level5.html
@@ -16,6 +16,9 @@
 
   </head>
   <body>
+    <audio hidden="true" controls autoplay preload="auto" loop>
+      <source src="./Songs/lvl5.mp3" type="audio/mp3">
+    </audio>
     <main>
     </main>
     <script src="level5.js"></script>
