Victory reposition and color animation

--- a/level5.html
+++ b/level5.html
@@ -6,6 +6,7 @@
     <script src="https://p5play.org/v3/planck.min.js"></script>
     <script src="https://p5play.org/v3/p5play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="glimmer.css">
     <meta charset="utf-8" />
 
     <style>
@@ -19,8 +20,12 @@
     <audio hidden="true" controls autoplay preload="auto" loop>
       <source src="./Songs/lvl5.mp3" type="audio/mp3">
     </audio>
+    <div id="shine" class="glimmer"></div>
     <main>
     </main>
+    <!--script> 
+      document.getElementById("shine").style.fontSize = '30px';
+    </script-->
     <script src="level5.js"></script>
     <script src="endgoal.js"></script>
   </body>
