--- a/gamefiles/tutorial.html
+++ b/gamefiles/tutorial.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <audio hidden="true" controls autoplay preload="auto" loop>
-      <source src="./Songs/playGame.mp3" type="audio/mp3">
+      <source src="../Songs/playGame.mp3" type="audio/mp3">
     </audio>
     <main>
     </main>
