--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1 class="title">Walsh University Software Project</h1>
       <div class="game">
         <!--local host address: href="/level_selection.html"-->
-        <a href="/tutorial.html">
+        <a href="/gamefiles/tutorial.html">
           Play Game!
         </a>
       </div>
