@2 add level1 reorganization

--- a/gamefiles/level_selection.html
+++ b/gamefiles/level_selection.html
@@ -11,17 +11,17 @@
     </style>
     <body>
         <audio hidden="true" controls autoplay preload="auto" loop>
-            <source src="./Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type="audio/wav">
+            <source src="../Songs/Fluttery Sledge - 100 BPM - 2 - Bass - cw3_bss90_lucid_G.wav" type="audio/wav">
         </audio>
        <div class="header-row">
             <a class="back" href="/index.html">Back</a>
             <h1>Level Selection</h1>
        </div> 
-        <a class="lvlTut" href="/tutorial.html">T</a>
-        <a class="lvlOne" href="/level1.html">1</a>
-        <a class="lvlTwo" href="/level2.html">2</a>
-        <a class="lvlThree" href="/level3.html">3</a>
-        <a class="lvlFour" href="/level4.html">4</a>
-        <a class="lvlFive" href="/level5.html">5</a>
+        <a class="lvlTut" href="/gamefiles/tutorial.html">T</a>
+        <a class="lvlOne" href="/gamefiles/level1.html">1</a>
+        <a class="lvlTwo" href="/gamefiles/level2.html">2</a>
+        <a class="lvlThree" href="/gamefiles/level3.html">3</a>
+        <a class="lvlFour" href="/gamefiles/level4.html">4</a>
+        <a class="lvlFive" href="/gamefiles/level5.html">5</a>
     </body>
 </html>
